2008-01-04  Richard Stallman  <rms@gnu.org>

	* delsel.el (delete-selection-mode): Doc fix.

2008-01-04  Glenn Morris  <rgm@gnu.org>

	* version.el (emacs-copyright): Update to 2008.

2008-01-03  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (gud-def): Do nothing if gud-running is t.
	(gud-speedbar-menu-items): Add item for gdb-var-set-format
	below.

	* progmodes/gdb-ui.el (gdb-var-set-format): Set the output format
	of watch expressions (only works fully with GDB 6.7 or later).

2008-01-03  Dan Nicolaescu  <dann@ics.uci.edu>

	* time-stamp.el (time-stamp-time-zone):
	* whitespace.el (whitespace-check-buffer-leading)
	(whitespace-check-buffer-trailing)
	(whitespace-check-buffer-indent)
	(whitespace-check-buffer-spacetab)
	(whitespace-check-buffer-ateol):
	* progmodes/sh-script.el (sh-indentation):
	* textmodes/ispell.el (ispell-local-pdict): Add
	safe-local-variable properties.

2007-12-31  Richard Stallman  <rms@gnu.org>

	* cus-edit.el (custom-add-parent-links): New arg DOC-INITIAL-STRING.
	Defaults for INITIAL-STRING and DOC-INITIAL-STRING do not include
	`parent'.
	(custom-group-value-create): Pass two args to custom-add-parent-links.

2007-12-29  Richard Stallman  <rms@gnu.org>

	* font-lock.el (font-lock-prepend-text-property)
	(font-lock-append-text-property): Canonicalize the face and
	font-lock-face properties.

	* faces.el (facep): Doc fix.

	* startup.el (fancy-startup-tail, fancy-about-text)
	(fancy-startup-text): Regularize format of face property.

	* facemenu.el (list-colors-print): Use :background and :foreground
	instead of background-color and foreground-color.

2007-12-29  Drew Adams  <drew.adams@oracle.com>

	* cus-edit.el (custom-add-parent-links):
	Fill the "Parent documentation" text.

2007-12-29  Eli Zaretskii  <eliz@gnu.org>

	* textmodes/ispell.el (ispell-grep-command): Use "grep" on
	MS-Windows and MS-DOS.
	(ispell-grep-options): Use "-Ei" on MS-Windows and MS-DOS.
