@@ -1,3 +1,8 @@
+2008-01-04  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc-git.el (vc-git-dir-state):
+	* vc-hg.el (vc-hg-dir-state): Set the vc-backend property.
+
 2008-01-04  Richard Stallman  <rms@gnu.org>
 
 	* delsel.el (delete-selection-mode): Doc fix.
